# R30_MiWi_Star_CMake

./: .gitignore  README.md
R30M_Star/R30M_Star/cmake/: gcc.cmake
R30M_Star/R30M_Star/src/: CMakeLists.txt  demo_output.c  task.c
R30M_Star/R30M_Star/src/ASF/sam0/drivers/system/: CMakeLists.txt
R30M_Star_solution/: R30M_Star.atsln
R30M_Star_solution/R30M_Star/: R30M_Star.cproj  jlink.config  vcpkg-configuration.json  vcpkg.json
R30M_Star_solution/R30M_Star/Debug/: Makefile  R30M_Star.lss  R30M_Star.srec  makedep.mk
R30M_Star_solution/R30M_Star/src/: CMakeLists.txt  demo_output.h  main.c  star_demo.c
R30M_Star_solution/R30M_Star/src/ASF/: CMakeLists.txt
R30M_Star_solution/R30M_Star/src/ASF/sam0/: CMakeLists.txt
R30M_Star_solution/R30M_Star/src/ASF/sam0/boards/samr30_module_xplained_pro/: CMakeLists.txt
R30M_Star_solution/R30M_Star/src/config/: miwi_config.h
